# easy_sql

./: .coveragerc  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  debugger.py  poetry.toml  pyproject.toml  requirements-all.txt  requirements-flink.txt  setup.cfg
.github/: mergify.yml  release-drafter.yml
.github/workflows/: build.yaml  draft-release.yaml  release.yaml
.metals/: metals.lock.db  metals.mv.db
docs/: conf.py  index.rst  pyproject.toml  requirements.txt
docs/easy_sql/: add_backend.md  api.md  bnf.md  build_install.md  debug.md  easy_sql.md  functions.md  functions.tpl.md  linter.md  quick_start.md  syntax.md  testing.md  udfs.md  udfs.tpl.md  variables.md
docs/easy_sql/backend/: flink.md
docs/scripts/: generate_func_data.py  update_doc.py  update_function_doc.py
docs/sqlfluff/: easy_sql_linter.md  new_rule.md  quick_start.md
easy_sql/: base_test.py  data_process.py  data_process_itest.py  data_process_test.py  local_spark.py  logger.py  report.py  report_test.py  spark_optimizer.py  sql_processor_debugger.py  sql_processor_debugger_itest.py  sql_processor_debugger_test.py  sql_processor_itest.py  sql_processor_test.py  sql_test.py  sql_test_itest.py  sql_tester.py  sql_tester_test.py
easy_sql/cli/: backend_processor.py  sql_config.py  sql_config_test.py
easy_sql/config/: sql_config.py  sql_config_test.py
easy_sql/sql_linter/: .sqlfluff  config  sql_linter.py  sql_linter_cli.py  sql_linter_cmd.py  sql_linter_reportor.py  sql_linter_test.py
easy_sql/sql_linter/rules/: __init__.py  bq_schema_rule.py  unparsable_rule.py
easy_sql/sql_processor/: __init__.py  common.py  context.py  context_test.py  funcs.py  funcs_common.py  funcs_flink.py  funcs_flink_itest.py  funcs_itest.py  funcs_rdb.py  funcs_rdb_itest.py  funcs_rdb_test.py  funcs_spark.py  report.py  sql_processor.py  step.py  step_test.py
easy_sql/sql_processor/backend/: __init__.py  base.py  bigquery.py  clickhouse.py  flink.py  flink_itest.py  flink_test.py  maxcompute.py  maxcompute_itest.py  maxcompute_test.py  postgres.py  rdb.py  rdb_itest.py  rdb_test.py  spark.py  spark_test.py
easy_sql/sql_processor/backend/sql_dialect/: __init__.py  bigquery.py  clickhouse.py  clickhouse_test.py  postgre.py  postgres.py
easy_sql/udf/: check.py  udfs.py  udfs_test.py
easy_sql/utils/: db_connection_utils.py  flink_test_cluster.py  flink_test_cluster_itest.py  io_utils.py  kv.py  object_utils.py  object_utils_test.py  sql_expr.py  sql_expr_test.py
examples/rtdw/: .gitignore  Makefile  readme.md
examples/rtdw/java/: .gitignore  README  build.gradle
examples/rtdw/java/src/main/java/com/easysql/example/: Example.java  Ingest.java  Sinks.java  (+3 more)
examples/rtdw/scala/: .gitignore  Makefile
examples/rtdw/scala/src/com/easysql/example/: ingest.scala
examples/rtdw/workflow/sales/ods/: Makefile  data.sql  ingest.sql  ingest.test.sql  ingest_funcs.py  ingest_hudi.sql  ingest_hudi.test.sql  ingest_hudi_funcs.py  ods.flink_tables.json  register-pg.json
requirements/: requirements-clickhouse.txt  requirements-e2e.txt  requirements-maxcompute.txt  requirements-postgres.txt  requirements-spark.txt  requirements-ut.txt  requirements.txt
test/: Dockerfile  etl_test.xlsx  sample_data_process.py  sample_etl.clickhouse.json  sample_etl.clickhouse.sql  sample_etl.clickhouse.xlsx  sample_etl.flink.hive.postgres.sql  sample_etl.flink.hive.sql  sample_etl.flink.hudi-agg.sql  sample_etl.flink.postgres-cdc.multi-sink.sql  sample_etl.flink.postgres-cdc.sql  sample_etl.flink.postgres-hudi.sql  sample_etl.flink.postgres.sql  sample_etl.flink_source_config.json  sample_etl.flink_table_config.json  sample_etl.flink_tables_file.json  sample_etl.flink_tables_file.yml  sample_etl.flink_tables_file_hive.yml  sample_etl.postgres.json  sample_etl.postgres.sql  sample_etl.postgres.xlsx  sample_etl.spark.json  sample_etl.spark.sql  sample_etl.spark.xlsx  sample_etl.syntax.xlsx  sample_etl_wps.syntax.xlsx  test_bg_ml.py  test_lint.py
test/customized_func/: customized_func.py  etl_with_customized_func.sql
test/doc/: .sqlfluff  debugging.sql  test_sqlfulff.sql  variables.sql
test/flink_hive_conf/: hive-site.xml
test/udf/clickhouse/: etl_with_udf.sql  udf.py
test/udf/flink-python/: etl_with_udf.sql  udf.py
test/udf/flink-scala/: Makefile  etl_with_udf.sql
test/udf/flink-scala/your/company/: udfs.scala
test/udf/spark-python/: etl_with_udf.sql  udf.py
test/udf/spark-scala/: .gitignore  Makefile  etl_with_udf.sql
test/udf/spark-scala/your/company/: udfs.scala
(+2 files in other folders)
