[tool.poetry]
name = "easy_sql-easy_sql"
version = "0.3.0"
description = "A library developed to ease the data ETL development process."
authors = ["Easy SQL from Thoughtworks"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"


[tool.isort]
profile = "black"
src_paths = ["easy_sql"]

[tool.black]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
