[tool.poetry]
name = "easy_sql-easy_sql"
version = "0.3.0"
description = "A library developed to ease the data ETL development process."
authors = ["Easy SQL from Thoughtworks"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.7"
click = {version = "^8.1.3", optional = true}
regex = {version = "^2022.7.25", optional = true}
colorlog = {version = "^6.6.0", optional = true}
sqlfluff = {version = "^1.2.1", optional = true}
pyspark = {version = "^3.3.0", optional = true}
SQLAlchemy = {version = "^1.4.40", optional = true}
psycopg2-binary = {version = "^2.9.3", optional = true}
clickhouse-driver = {version = "^0.2.4", optional = true}
clickhouse-sqlalchemy = {version = "^0.2.1", optional = true}

[tool.poetry.dev-dependencies]
xlrd = "^2.0.1"
pymongo = "^4.2.0"
coverage = "^6.4.3"

[tool.poetry.extras]
cli = ["click"]
linter = ["sqlfluff","colorlog","regex"]
spark = ["pyspark"]
pg = ["SQLAlchemy", "psycopg2-binary"]
clickhouse = ["SQLAlchemy","clickhouse-driver","clickhouse-sqlalchemy"]

[tool.isort]
profile = "black"
src_paths = ["easy_sql"]

[tool.black]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
