[tool.poetry]
name = "easy_sql-easy_sql"
version = "1.0.0"
description = "A library developed to ease the data ETL development process."
authors = ["Easy SQL from Thoughtworks <easy_sql@thoughtworks.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/easysql/easy_sql"
homepage = "https://easy-sql.readthedocs.io"

classifiers = [
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
]
packages = [
    { include = "easy_sql" },
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/easysql/easy_sql/issues"

[tool.poetry.dependencies]
python = "^3.7"
click = {version = "^8.1.3", optional = true}
regex = {version = "^2022.7.25", optional = true}
colorlog = {version = "^6.6.0", optional = true}
sqlfluff = {version = "~1.4.5", optional = true}
SQLAlchemy = {version = "^1.4.40", optional = true}
clickhouse-driver = {version = "^0.2.4", optional = true}
clickhouse-sqlalchemy = {version = "^0.2.1", optional = true}
psycopg2 = {version = "^2.9.3", optional = true}
pyodps = {version = "^0.11.2.1", optional = true}
pyspark = [{version = ">=2.3.0, != 3.1.1, != 3.1.2, != 3.1.3, !=3.2.0, != 3.2.1", optional = true}]

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pymongo = "^3.8.0"
coverage = "^6.4.3"
pre-commit = "^2.20.0"
flake8 = "^5.0.4"
flake8-bugbear = "^22.7.1"
flake8-comprehensions = "^3.10.0"
flake8-simplify = "^0.19.3"
flake8-type-checking = { version = "^2.1.2", python = "^3.8" }
openpyxl = "^3.0.10"

[tool.poetry.extras]
cli = ["click"]
linter = ["sqlfluff","colorlog","regex"]
spark = ["pyspark"]
pg = ["SQLAlchemy", "psycopg2"]
clickhouse = ["SQLAlchemy","clickhouse-driver","clickhouse-sqlalchemy"]
maxcompute = ["pyodps"]

[tool.isort]
profile = "black"
src_paths = ["easy_sql"]

[tool.black]
line-length = 120
preview = true

[tool.pytest.ini_options]
testpaths = [
    "easy_sql",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
