[metadata]
name = easy_sql-easy_sql
version = 0.2.0
author = Easy SQL from Thoughtworks
author_email = easy_sql@thoughtworks.com
description = A library developed to ease the data ETL development process.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/easysql/easy_sql
project_urls =
    Bug Tracker = https://github.com/easysql/easy_sql/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.7

[options.packages.find]
where = .
